Updated Person class, made it also save text data to data/profiles.csv

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-images/classified/negative/*
-!images/classified/negative/0_test_5bad7sasweljku73.jpg
-images/classified/positive/*
-!images/classified/positive/1_test_4tz3kjldfj3482.jpg
-images/top/
-images/unclassified/*
-!images/unclassified/test_4tz3kjldfj3482.jpg
-!images/unclassified/test_5bad7sasweljku73.jpg
+data/classified/negative/*
+!data/classified/negative/0_test_5bad7sasweljku73.jpg
+data/classified/positive/*
+!data/classified/positive/1_test_4tz3kjldfj3482.jpg
+data/top/
+data/unclassified/*
+!data/unclassified/test_4tz3kjldfj3482.jpg
+!data/unclassified/test_5bad7sasweljku73.jpg
+/data/profiles.csv
 venv/
-images/tmp/run.jpg
+data/tmp/run.jpg
 .idea/
 tf/training_data/bottlenecks/negative/*
 tf/training_data/bottlenecks/positive/*
